paired players under one lock and reported failed matches to both clients